--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@ layout: default
 permalink: /
 ---
 
-{% include_relative home.md %}
+{% capture home_content %}{% include_relative home.md %}{% endcapture %}
+{{ home_content | markdownify }}
